[package]
authors = ["phiresky <phireskyde+git@gmail.com>"]
description = "Extension for sqlite that provides transparent dictionary-based row-level compression for sqlite"
edition = "2018"
license = "LGPL-2.0-or-later"
name = "sqlite-zstd"
repository = "https://github.com/phiresky/sqlite-zstd"
version = "0.3.2"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rusqlite/functions"]

build_extension = ["rusqlite/loadable_extension"]

# debug_zstd = ["zstd/debug"]

benchmark = ["structopt", "procfs", "rusqlite/backup", "rusqlite/load_extension", "csv"]

all = ["benchmark"]

[[bin]]
name = "benchmark"
required-features = ["benchmark"]

[[bin]]
name = "create_test_db"
required-features = ["benchmark"]

[lib]
crate-type = ["cdylib"]

[dependencies]
zstd = {version = "0.13.2", features = ["experimental"]}
anyhow = "1.0.89"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"

csv = {version = "1.3.0", optional = true}
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = "0.4.22"
lru_time_cache = "0.11.11"
safer_owning_ref = "0.5.0"
procfs = {version = "0.16.0", optional = true}
rand = "0.8.5"
structopt = {version = "0.3.26", optional = true}

[dependencies.rusqlite]
features = ["functions", "blob", "bundled", "array"]
package = "rusqlite"
version = "0.32.1"

[dev-dependencies]
chrono = "0.4.38"
names = "0.14.0"
pretty_assertions = "1.4.1"

[profile.release]
lto = "fat"

# cargo-deb configuration
# https://github.com/kornelski/cargo-deb
[package.metadata.deb]
# Debianized package name, conveniently matches the name of the shared library file
name = "libsqlite-zstd"
# $auto fills in the automatically calculated dependencies (namely libc)
# libsqlite3-0 is added because this library isn't very useful without SQLite
depends = "$auto, libsqlite3-0"
# This feature is required to build the shared library extension
features = ["build_extension"]
assets = [
    # Install the shared library extension to /usr/lib, where SQLite can find it
    ["target/release/libsqlite_zstd.so", "usr/lib/", "744"],
    # It's good practice to install the README file into /usr/share/doc for every package
    ["README.md", "usr/share/doc/libsqlite-zstd/README", "644"],
]
